--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,5 @@
-REACT_APP_API_ENDPOINT=https://api.userapp2.com
+REACT_APP_API_ENDPOINT=http://localhost:8080
+REACT_APP_NODE_ENV=dev
+REACT_APP_CLOUD_NAME=user-staging
+REACT_APP_API_KEY=""
+REACT_APP_GOOGLE_MAPS_API_KEY=""
