--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   },
   "dependencies": {
     "@babel/core": "7.12.3",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@babel/plugin-proposal-do-expressions": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.13.0",
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
@@ -16,16 +15,22 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@bit/c_t.components.loader-button": "^1.0.2",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/styles": "^4.11.3",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@hookform/resolvers": "^2.8.3",
+    "@mui/core": "^5.0.0-alpha.53",
+    "@mui/icons-material": "^5.0.5",
+    "@mui/material": "^5.0.6",
+    "@mui/styled-engine-sc": "^5.0.4",
+    "@mui/styles": "^5.0.2",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@svgr/webpack": "5.5.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
-    "axios": "^0.21.1",
+    "axios": "^0.24.0",
     "babel-eslint": "10.1.0",
     "babel-jest": "^26.6.0",
     "babel-loader": "8.1.0",
@@ -67,6 +72,8 @@
     "jest-watch-typeahead": "0.6.1",
     "jwt-decode": "^3.1.2",
     "mini-css-extract-plugin": "0.11.3",
+    "mui": "^0.0.1",
+    "mui-icons": "^1.2.1",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
@@ -75,23 +82,27 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "5.0.2",
     "prettier": "^2.2.1",
-    "prompts": "2.4.0",
     "promise-deferred": "^2.0.3",
+    "prompts": "2.4.0",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.2",
     "react-dom": "^17.0.1",
     "react-error-boundary": "^3.1.1",
+    "react-hook-form": "^7.18.1",
+    "react-icons": "^4.3.1",
     "react-indexed-db": "^1.0.12",
-    "react-refresh": "^0.8.3",
     "react-lottie": "^1.2.3",
-    "react-router-dom": "^5.2.0",
     "react-query": "^3.12.0",
+    "react-refresh": "^0.8.3",
+    "react-router-dom": "^5.2.0",
+    "react-user-list": "^1.0.1",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "^10.0.5",
     "semver": "7.3.2",
     "style-loader": "1.3.0",
+    "styled-components": "^5.3.3",
     "superagent": "^5.2.2",
     "superagent-prefix": "^0.0.2",
     "terser-webpack-plugin": "4.2.3",
@@ -102,7 +113,7 @@
     "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "5.1.4",
-    "yup": "^0.32.9"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "node scripts/start.js",
